added base css file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta name="twitter:image" content="">
         <meta name="twitter:creator" content="@someCodeGirl">
         <!--Stylesheets-->
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="/css/core.css">
         <!--Scripts-->
     </head>
     <body>
