--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
         <!--Scripts-->
     </head>
     <body>
+        <div class="under-construction">
+            <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar" />"
+            <h1>someCodeGirl</h1>
+            <p>Coming soon...</p>
+        </div>
     </body>
 </html>
