--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar" />"
             <h1>someCodeGirl</h1>
             <p>Coming soon...</p>
+            <p><a href="pgp.txt" target="_blank">My PGP Key</a></p>
+            <p><a href=".well-known/security.txt" target="_blank">My security.txt</a></p>
+            <p><a href="canary/latest-canary.html" target="_blank">My latest warrant canary</a></p>
         </div>
     </body>
 </html>
