updated css structure and theme, wrote core homepage content, and cleaned up some stuff.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,30 @@
         <meta name="twitter:image" content="">
         <meta name="twitter:creator" content="@someCodeGirl">
         <!--Stylesheets-->
-        <link rel="stylesheet" type="text/css" href="/css/core.css">
+        <link rel="stylesheet" type="text/css" href="src/css/core.css">
+        <link rel="stylesheet" type="text/css" href="src/css/index.css">
         <!--Scripts-->
     </head>
     <body>
-        <div class="under-construction">
-            <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar" />"
-            <h1>someCodeGirl</h1>
-            <p>Coming soon...</p>
-            <p><a href="pgp.txt" target="_blank">My PGP Key</a></p>
-            <p><a href=".well-known/security.txt" target="_blank">My security.txt</a></p>
-            <p><a href="canary/latest-canary.html" target="_blank">My latest warrant canary</a></p>
-        </div>
+        <main class="home-container">
+            <section>
+                <h1>someCodeGirl's website</h1>
+                <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar">
+                <p>Hiya! I'm someCodeGirl. Welcome to my little corner of the internet!</p>
+            </section>
+            <section>
+                <h2>About me</h2>
+                <p>I am an 28 year old queer genderfluid nerd. I enjoy stuff like aviation, photography, games, music and all things tech related.</p>
+                <p>I (sometimes) use this to scream thoughts into the void but mainly this is used as a cenerlized place to find other accounts, my projects, and that sorta stuff.</p>
+            </section>
+            <section>
+                <h2>Contact me</h2>
+                <p>Email: somecodegirl@proton.me</p>
+            </section>
+            <section>
+                <h2>Warrant Canary</h2>
+                <p>Latest Canary: <a href="latest-canary.html">17 March 2025 @ 0700 ZULU</a></p>
+            </section>
+        </main>
     </body>
 </html>
