added image (type, width, height, and alt) as well as logo OG metas. Added utfs links for all metas that where missing content.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
         <meta property="og:image" content="">
         <meta property="og:description" content="The online home of someCodeGirl">
         <meta property="og:site_name" content="someCodeGirl">
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW"/>
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="300" />
+        <meta property="og:image:alt" content="someCodeGirl.me - The online home of someCodeGIrl" />
+        <meta property="og:logo" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" />
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="someCodeGirl">
         <meta name="twitter:description" content="The online home of someCodeGirl">
-        <meta name="twitter:image" content="">
+        <meta name="twitter:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW">
         <meta name="twitter:creator" content="@someCodeGirl">
         <!--Stylesheets-->
         <link rel="stylesheet" type="text/css" href="src/css/core.css">
