--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
         <meta property="og:title" content="someCodeGirl">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://somecodegirl.me">
-        <meta property="og:image" content="">
         <meta property="og:description" content="The online home of someCodeGirl">
         <meta property="og:site_name" content="someCodeGirl">
         <meta property="og:locale" content="en_US" />
-        <meta property="og:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW"/>
+        <meta property="og:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
-        <meta property="og:image:alt" content="someCodeGirl.me - The online home of someCodeGIrl" />
+        <meta property="og:image:alt" content="someCodeGirl.me - The online home of someCodeGirl" />
         <meta property="og:logo" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" />
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="someCodeGirl">
