typos + added updated head to canary page

--- a/latest-canary.html
+++ b/latest-canary.html
@@ -1,24 +1,30 @@
 !<!DOCTYPE html>
 <html>
     <head>
-        <title>someCodeGirl - Canary</title>
+        <title>someCodeGirl.me - Canary</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="The online home of someCodeGirl">
         <meta name="author" content="someCodeGirl">
-        <meta name="keywords" content="someCodeGirl, canary, warrant, warrant canary"/>
+        <meta name="keywords" content="someCodeGirl"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Open Graph/Twitter-->
-        <meta property="og:title" content="someCodeGirl">
+        <meta property="og:title" content="someCodeGirl.me - Canary">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://somecodegirl.me">
-        <meta property="og:image" content="">
+        <meta property="og:url" content="https://somecodegirl.me/latest-canary">
         <meta property="og:description" content="The online home of someCodeGirl">
         <meta property="og:site_name" content="someCodeGirl">
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="300" />
+        <meta property="og:image:alt" content="someCodeGirl.me - The online home of someCodeGirl" />
+        <meta property="og:logo" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" />
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="someCodeGirl">
+        <meta name="twitter:title" content="someCodeGirl.me - Canary">
         <meta name="twitter:description" content="The online home of someCodeGirl">
-        <meta name="twitter:image" content="">
+        <meta name="twitter:image" content="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQCf6SMwUzLJnMQviY1GuU6Ok249sKAmTblZIW">
         <meta name="twitter:creator" content="@someCodeGirl">
         <!--Stylesheets-->
         <link rel="stylesheet" type="text/css" href="src/css/core.css">
