made H1 less cringe

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <body>
         <main class="home-container">
             <section>
-                <h1>someCodeGirl's website</h1>
+                <h1>someCodeGirl</h1>
                 <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar">
                 <p>Hiya! I'm someCodeGirl. Welcome to my little corner of the internet!</p>
             </section>
