misc bug fixes and changes for various reported issues.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-!<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html lang="en">
     <head>
-        <title>someCodeGirl.me</title>
+        <title>someCodeGirl.me - The online home of someCodeGirl</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="The online home of someCodeGirl">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'none', frame-ancestors 'none', base-uri 'none', form-action 'none', default-src 'none', style-src 'self';">
+        <meta name="description" content="someCodeGirl.me is the online home of someCodeGirl. It serves as her corner of the internet and provides a centeralized place to find her projects and other accounts.">
         <meta name="author" content="someCodeGirl">
         <meta name="keywords" content="someCodeGirl"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="canonical" href="https://somecodegirl.me/index.hhtml"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="src/img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="src/img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="src/img/favicon/site.webmanifest">
         <!--Open Graph/Twitter-->
         <meta property="og:title" content="someCodeGirl.me">
         <meta property="og:type" content="website">
@@ -35,7 +45,7 @@
         <main class="home-container">
             <section>
                 <h1>someCodeGirl</h1>
-                <img src="https://4vs8r5ztn3.ufs.sh/f/cC8f3XH57MPQ7elW9dvfpnkgbv4Or3RjU6u2C0AKdDMZHVGw" alt="someCodeGirl's picrew avatar">
+                <img src="src/img/someCodeGirl-picrew.webp" alt="someCodeGirl's picrew avatar">
                 <p>Hiya! I'm someCodeGirl. Welcome to my little corner of the internet!</p>
             </section>
             <section>
