--- a/latest-canary.html
+++ b/latest-canary.html
@@ -1,13 +1,23 @@
-!<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html lang="en">
     <head>
-        <title>someCodeGirl.me - Canary</title>
+        <title>someCodeGirl.me - The online home of someCodeGirl - Warrant Canary</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="The online home of someCodeGirl">
+        <meta name="description" content="someCodeGirl.me is the online home of someCodeGirl. It serves as her corner of the internet and provides a centeralized place to find her projects and other accounts. This page is the warrant canary for someCodeGirl.me.">
         <meta name="author" content="someCodeGirl">
         <meta name="keywords" content="someCodeGirl"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'none', frame-ancestors 'none', base-uri 'none', form-action 'none', default-src 'none', style-src 'self';">
+        <link rel="canonical" href="https://somecodegirl.me/latest-canary.html"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="src/img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="src/img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="src/img/favicon/site.webmanifest">
         <!--Open Graph/Twitter-->
         <meta property="og:title" content="someCodeGirl.me - Canary">
         <meta property="og:type" content="website">
