explicit size set for picrew to please the google gods.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main class="home-container">
             <section>
                 <h1>someCodeGirl</h1>
-                <img src="src/img/someCodeGirl-picrew.webp" alt="someCodeGirl's picrew avatar">
+                <img src="src/img/someCodeGirl-picrew.webp" alt="someCodeGirl's picrew avatar" height="600" width="600">
                 <p>Hiya! I'm someCodeGirl. Welcome to my little corner of the internet!</p>
             </section>
             <section>
