yeeted canary bc im lazy, pride update

--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
                 <p>I (sometimes) use this to scream thoughts into the void but mainly this is used as a cenerlized place to find other accounts, my projects, and that sorta stuff.</p>
             </section>
             <section>
-                <h2>Contact me</h2>
-                <p>Email: somecodegirl@proton.me</p>
-            </section>
-            <section>
-                <h2>Warrant Canary</h2>
-                <p>Latest Canary: <a href="latest-canary.html">17 March 2025 @ 0700 ZULU</a></p>
+                <h2>HAPPY PRIDE!!!!!</h2>
+                <p>It's Pride Month. This year sucks, it's scarry, they're trying to erase us as some of the first victims of their genocide. Just remember, Stonewall was a fucking RIOT. Death before detransition. Fight to your very last breath. find community, find the little things that bring you joy, we're stronger together.</p>
+                <p>Be Gay, Do Crime, Fuck Fascism, Free Palestine, Trans Rights, Protect Trans Kids.</p>
             </section>
         </main>
     </body>
